--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "boilerplate",
+  "name": "liveingreece",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch src/sass/:src/css/",
-    "sass:src": "sass --watch src/sass/:src/css/",
-    "sass:dist": "sass --watch src/sass/:../../xampp/htdocs/boilerplate.com/wp-content/themes/boilerplate/src/css",
-    "build": "webpack"
+    "sass": "sass --watch src/sass/:src/css/"
   },
   "repository": {
     "type": "git",
@@ -17,9 +14,5 @@
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.64.1"
-  },
-  "dependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
   }
 }
